--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,26 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
-    -webkit-font-smoothing: antialiased; /
+    -webkit-font-smoothing: antialiased;
   }
 
+.hero-section {
+    height: 100vh;
+    width: 100%;
 
+}
+
+.hero-image {
+    width: 80vw;
+    height: 60vh;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url(https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80) no-repeat
+    ;
+}
 
 
 
@@ -25,53 +41,4 @@
     margin-top: 54px;
 }
 */
-
-
-
-
-
-div .hero_bg_image {
-
-
-/* 
-
-    position: sticky;
-    top: 0;
-
-
-font-family: 'Roboto', sans-serif;
-*/
-
-/* div.s1 {
-    margin-top: 65px;
-    max-width: 1066px;
-    max-height: 630px;
-    border: 2px solid brown;
-}
-
-img {
-    display: block;
-    max-height: 630px;
-    
-}
-
-p.s1 {
-    text-align: center;
-}
-
-h1 {
-    text-align: center;
-}
-
-img.svg-menu {
-    display: block;
-    margin: auto;
-    margin-top: 54px;
-} */
-
-
-
-
-
-}
-
+  
