--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 :root {
     font-size: 16px;
-  }
+}
 
 * {
     margin: 0;
@@ -8,38 +8,67 @@
     border: 0;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
-  }
-
- body {
-     color: white;
- } 
-
-.hero-section {
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-
 }
 
-.hero-image div {
-    max-width: 1200px;
-    width: 80vw;
-    height: 60vh;
-    display: flex;
-    flex-direction: column;
-    background-image: url(https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80);
+body {
+    width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
+    background-color: white;
+} 
+
+main {
+    width: 100%;
+}
+ 
+section {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    min-height: 36rem;
+    height: 100vh;
+}
+
+div.hero-image {
+    background-color: beige;
+    background-image: url('https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80');
+    
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    ;
+    
+    height: 80%;
+    width: 80%;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+
+  
 }
 
-.hero-image h1 {
-    color: black;
+div.hero-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 60%;
+    width: 60%;
+    background-color: white;
 }
 
-
+.hero-text h1 {
+    font-family: 'Butler', sans-serif;
+    font-weight: 300;
+    max-width: 100%;
+    font-size: 5.2rem;
+    white-space: nowrap;
+}
 
 
   
