--- a/styles/book-style.css
+++ b/styles/book-style.css
@@ -1,5 +1,6 @@
 :root {
     font-size: 17px;
+
 }
 
 * {
@@ -25,6 +26,7 @@ h2.autor {
 
 h2.about p {
     font-size: 1.1rem;
+    line-height: 1.5rem;
     font-weight: 700;
 }
 
@@ -53,13 +55,7 @@ article {
 
 p {
     padding-bottom: 1rem;
-}
-
-
-
-
-
-p {
+    line-height: 1.4rem;
     font-size: 1rem;
-    text-align: justify;
+    /* text-align: justify; */
 }
