--- a/styles/style.css
+++ b/styles/style.css
@@ -84,164 +84,19 @@ div.hero-text {
     color: black;
 }
 
+
 /* section bio */
 
 #bio {
-    /* max-height: 90vh; */
-}
-
-
-.bio-img, .bio-about {
-    display: inline-block;
-    max-width: 50%;
-    width: 49.99%;
-    float: left;
-
-}
-
-.bio-img {
-    max-height: 90vh;
-    position: relative;
-    max-width: 40%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.bio-about {  
-    margin-left: 6rem;
-    padding-top: 10rem;
-
-}
-
-.bio-about h3 {
-    font-family: Butler, sans-serif;
-    font-size: 6rem;
-    font-weight: 300;
-}
-
-.bio-about p {
-    font-family: Roboto, sans-serif;
-    font-size: 1.2rem;
-    margin-top: 3rem;
-    font-weight: 450;
-    color: #636363;
-}
-
-.bio-about blockquote {
-    font-family: Butler, sans-serif;
-    font-size: 2rem;
-    font-weight: 200;
-    margin-top: 1rem;
-    max-width: 415px;
-}
-
-.box {
-    width: 14px;
-    height: 4px;
-    background-color: black;
-    margin-top: 4rem;
-}
-
-h2.bio {
-    font-family: Roboto, sans-serif;
-    font-size: 1.2rem;
-    font-weight: 600;
-    transform: rotate(-90deg);
-    position: relative;
-    left: 500px;
-    top: 100px;
+    display: none;
 }
 
 
 /* section des */
 
 #designers {
-    height: 80vh;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    max-width: 90rem;
-    align-items: flex-end;
-    line-height: 1.2rem;
+    display: none;
 }
-
-.big-photo {
-    display: block;
-    max-width: 610px;
-    margin-left: -150px;
-    margin-right: 100px;
-    
-}
-
-.big-photo img {
-    max-width: 100%;
-    min-height: 538px;
-    object-fit: cover;
-}
-
-.photo {
-    max-width: 310px;
-    margin-right: 50px;
-}
-
-.photo img {
-    max-width: 100%;
-    min-height: 442px;
-    object-fit: cover;
-}
-
-.big-photo h3 {
-    margin-top: 1rem;
-    margin-left: 150px;
-    font-size: 1rem;
-    font-family: Roboto, sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.big-photo p {
-    margin-left: 150px;
-    font-family: Roboto, sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-}
-
-.photo h3 {
-    margin-top: 1rem;
-    font-size: 1rem;
-    font-family: Roboto, sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.photo p {
-    font-family: Roboto, sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-}
-
-
-.bold {
-    font-weight: 700;
-}
-
-h2.des {
-    display: block;
-    font-family: Roboto, sans-serif;
-    font-size: 1.2rem;
-    font-weight: 600;
-    transform: rotate(-90deg);
-    position: absolute;
-    margin-left: 260px;
-    margin-top: -60px ;
-
-}
-
-
-
-
 
 /* section test */
 
